# AI-photofun-Studio

./: .gitignore  README.md  deploy.sh  huongdan.txt  package-lock.json
.github/workflows/: deploy.yaml
docs/: AI_FEATURES_USER_GUIDE.md  FRONTEND_IMAGE_INPUT_GUIDE.md  UNIT_TEST_REPORT.md
src/backend/backendAI/: .dockerignore  .env  .env.example  .gitignore  AI_FEATURES_GUIDE.md  API_COMMANDS.md  API_DOCUMENTATION.md  API_ENDPOINTS.md  API_TEST_README.md  DEPLOYMENT.md  DOCKER_OPTIMIZATION.md  DUAL_FLOW_ARCHITECTURE.md  Dockerfile  FREEPIK_ERROR_HANDLING.md  IMAGE_GALLERY_SETUP.md  METADATA_SCHEMA.md  QUICKSTART.md  QUICK_SETUP.md  README.md  REQUIREMENTS_ANALYSIS.md  SECURITY_ARCHITECTURE.md  SECURITY_SETUP_GUIDE.md  SUPABASE_SETUP.md  manage.py  (+47 more)
src/backend/backendAI/services/api_gateway/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/backendAI/services/api_gateway/src/: __init__.py  main.py
src/backend/backendAI/services/api_gateway/src/config/: settings.py
src/backend/backendAI/services/api_gateway/src/middleware/: __init__.py  auth.py  cors.py  logging.py
src/backend/backendAI/services/api_gateway/src/models/: request_models.py  response_models.py
src/backend/backendAI/services/api_gateway/src/routes/: chat.py  image.py
src/backend/backendAI/services/api_gateway/src/services/: chat_service.py
src/backend/backendAI/services/api_gateway/src/utils/: http_client.py  validators.py
src/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
temp/: pyvenv.cfg
(+637 files in other folders)
