[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for handling chat sessions and image generation"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.19.0"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"